# openmm-plumed

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml  codeql.yml
devtools/conda-envs/: build-macos-11.yml  build-macos-12.yml  build-macos-latest.yml  build-ubuntu-18.04.yml  build-ubuntu-22.04.yml  build-ubuntu-latest.yml
devtools/scripts/: install_cuda.sh
examples/basic-example/: colvar  plumed-metad-sim.py  system.xml.bz2
openmmapi/include/: PlumedForce.h  PlumedKernels.h
openmmapi/include/internal/: PlumedForceImpl.h  windowsExportPlumed.h
openmmapi/src/: PlumedForce.cpp  PlumedForceImpl.cpp
python/: CMakeLists.txt  plumedplugin.i  setup.py
python/tests/: TestPlumedForce.py
serialization/include/: PlumedForceProxy.h
serialization/src/: PlumedForceProxy.cpp  PlumedSerializationProxyRegistration.cpp
serialization/tests/: CMakeLists.txt  TestSerializePlumedForce.cpp
tests/: CMakeLists.txt  TestPlumedForce.cpp
